Include PHPMailer dependency in composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "DennisM83/Workopia",
+    "name": "dennism83/workopia",
     "description": "Job listing application",
     "authors": [
         {
@@ -12,5 +12,8 @@
             "Framework\\": "Framework/",
             "App\\": "App/"
         }
+    },
+    "require": {
+        "phpmailer/phpmailer": "^6.9"
     }
 }
